--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Accueil - Among Us</title>
 </head>
-<body>
-    
+<body class="dark-mode">
+    <header>
+        <nav class="menu-nav">
+            <ul>
+              <li class="btn">
+                <a href="#">Accueil</a>
+              </li>
+              <li class="btn">
+                <a href="#">Peluches</a>
+              </li>
+              <li class="btn">
+                <a href="#">Vêtements</a>
+              </li>
+              <li class="btn">
+                <a href="#">Accessoires</a>
+              </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
