--- a/pages/Paiement.html
+++ b/pages/Paiement.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="but_payer">
-            <input type="submit" value="Valider">
+            <a href="Confirmation_Paiement.html"><input type="submit" value="Valider"></a>
         </div>
     </div>
 
