pdf de la commande

--- a/pages/Confirmation_Paiement.html
+++ b/pages/Confirmation_Paiement.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/ffb4a8c022.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <title>Confirmation_Paiement</title>
+    <title>Confirmation Paiement</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon_io/apple-touch-icon.png"/>
     
 </head>
@@ -18,11 +18,11 @@
     <div class="confirmation_paiement" id="confirmation_paiement">
         <div class="head">
             <div class="container">
-                <h3>Merci pour votre commande!</h3>
+                <h3>Merci pour votre commande !</h3>
                 <p>
                     Nous souhaitons par-dessus tout que vous soyez heureux de votre<br>
                     achat, de votre produit et de notre service. Si vous avez des <br>
-                    question, n'hésiter pas à nous contacter !<br>
+                    questions, n'hésitez pas à nous contacter !<br>
                 </p>
                 <a href="https://www.univ-perp.fr/fr/contacts">facscien@univ-perp.fr - </a>
                 <a href="https://www.univ-perp.fr/fr/contacts">04 68 66 21 28</a>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="texte">
-            <span>Commande effectué le : <strong>
+            <span>Commande effectuée le : <strong>
                 <script>
                     document.write(date)
                 </script> </strong>
@@ -38,7 +38,7 @@
 
             <div class="paragraphe paragraphe1">
                 <p>Selon nos estimations, votre commande sera expédiée le <strong> <script>document.write(setdate)</script> </strong>. Cette date est 
-                   donnée à titre informatif et peut-être amenée à être modifiée. Vous serez notifié si c'est le 
+                   donnée à titre informatif et peut être amenée à être modifiée. Vous serez notifié si c'est le 
                    cas. Le délai de livraison peut varier entre 7 et 14 jours en fonction de l'adresse de 
                    livraison
                 </p>
