--- a/pages/Confirmation_Paiement.html
+++ b/pages/Confirmation_Paiement.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/ffb4a8c022.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <title>Confirmation Paiement</title>
+    <title>Among Us Fan Shop</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon_io/apple-touch-icon.png"/>
     
 </head>
